# nourish-patch

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  LICENSE-APACHE  LICENSE-MIT  README.md  link.all.sh  workspace.link.js  workspace.lint.allow.json  workspace.lint.js
.cargo/: config.toml
ci/: Containerfile  README.md
compositor.developer/: Cargo.toml  link.json
compositor.developer/developer.debug/debug.instance/instance.channel/: Cargo.toml  lib.rs
compositor.developer/developer.debug/debug.instance/instance.level/: Cargo.toml  lib.rs
compositor.developer/developer.debug/debug.instance/instance.record/: Cargo.toml  lib.rs
compositor.developer/developer.environment/environment.config/config.base/: Cargo.toml  base.rs  lib.rs
compositor.developer/developer.environment/environment.experimental/experimental.base/: Cargo.toml  base.rs
compositor.developer/developer.environment/environment.graphics/graphics.base/: Cargo.toml  base.rs
compositor.developer/developer.environment/environment.keybinding/keybinding.base/: Cargo.toml  base.rs
compositor.developer/developer.environment/environment.preference/preference.base/: Cargo.toml  base.rs
compositor.developer/developer.environment/environment.preference/preference.base/tests/: normalize.rs
compositor.developer/developer.log/log.process/process.instance/: Cargo.toml  lib.rs
compositor.developer/developer.log/log.process/process.instance.bind/: Cargo.toml  build.rs  lib.rs
compositor.developer/developer.log/log.process/process.instance.drain/: Cargo.toml  lib.rs
compositor.developer/developer.log/log.process/process.instance.example/: Cargo.toml  main.rs
compositor.developer/developer.log/log.process/process.instance.serve/: Cargo.toml  lib.rs
compositor.developer/developer.log/log.process/process.instance.shared/: Cargo.toml  lib.rs
compositor.developer/developer.log/log.process/process.main/: Cargo.toml  lib.rs
compositor.developer/developer.stats/stats.registry/registry.base/: Cargo.toml  lib.rs
compositor.developer/developer.stats/stats.registry/registry.counter/: Cargo.toml  lib.rs
compositor.developer/developer.stats/stats.registry/registry.gpu/: Cargo.toml  gpu.rs
compositor.developer/developer.stats/stats.registry/registry.hdr/: Cargo.toml  lib.rs
compositor.developer/developer.stats/stats.registry/registry.meta/: Cargo.toml  lib.rs
compositor.developer/developer.stats/stats.registry/registry.shader/: Cargo.toml  lib.rs
compositor.developer/developer.stats/stats.registry/registry.snapshot/: Cargo.toml  lib.rs
compositor.developer/developer.tool/developer.tool.window/logs/: .gitignore  README.md  bundle.sh  eslint.config.mjs  package-lock.json  package.json  setup.sh  tsconfig.json
compositor.developer/developer.tool/developer.tool.window/logs/src/: App.tsx  HdrTuning.tsx  Statistics.tsx  api.ts  main.tsx  types.ts
compositor.developer/developer.tool/developer.tool.window/logs/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
compositor.developer/developer.tool/developer.tool.window/window.stress/: Cargo.toml  README.md
compositor.developer/developer.tool/developer.tool.window/window.stress/src/: canvas.rs  diag.rs  font.rs  lib.rs  protocol.rs
compositor.developer/protocol/: logs.proto
compositor.installer/component/mx-gesture-daemon/: 42-logitech-hidpp.rules  Cargo.toml  README.md  build.rs  config.example.toml  mx-gesture-daemon.service  navigator.proto  setup.sh
compositor.installer/component/mx-gesture-daemon/src/: bind.rs  config.rs  device.rs  grpc.rs  hidpp.rs  main.rs
compositor.installer/component/pollkit-agent/: Cargo.toml  run.sh
compositor.installer/component/pollkit-agent/src/: main.rs
compositor.installer/component/settings-editor/: Cargo.toml  README.md
compositor.installer/component/settings-editor/src/: drm_probe.rs  edit.rs  main.rs  menu.rs  persist.rs  preferences.rs  prompt.rs  select.rs  template.rs  term.rs
compositor.installer/installer.process/: Cargo.toml
compositor.installer/installer.process/process.config/config.parse/parse.base/: Cargo.toml  lib.rs
compositor.installer/installer.process/process.config/config.parse/parse.custom/: Cargo.toml  lib.rs
compositor.installer/installer.process/process.config/config.parse/parse.matrix/: Cargo.toml  lib.rs
compositor.installer/installer.process/process.config/config.parse/parse.model/: Cargo.toml  lib.rs
compositor.installer/installer.process/process.config/config.parse/parse.preset/: Cargo.toml  lib.rs
compositor.introspection/introspection.execution/execution.launch/launch.build/: Cargo.toml  build.rs  lib.rs
compositor.introspection/introspection.execution/execution.launch/launch.dispatch/: Cargo.toml  dispatch.rs  lib.rs
compositor.introspection/introspection.execution/execution.launch/launch.execute/: Cargo.toml  execute.rs  lib.rs
compositor.introspection/introspection.extraction/extraction.window/window.base/: Cargo.toml  lib.rs
compositor.introspection/introspection.extraction/extraction.window/window.handler.hints/: Cargo.toml  extract.rs  lib.rs
compositor.introspection/introspection.extraction/extraction.window/window.handler.registry/: Cargo.toml  lib.rs  registry.rs
compositor.introspection/introspection.extraction/extraction.window/window.handler.traits/: Cargo.toml  lib.rs  traits.rs
compositor.introspection/introspection.extraction/extraction.window/window.handlers.chrome/: Cargo.toml  chrome.rs  lib.rs
compositor.introspection/introspection.extraction/extraction.window/window.handlers.chrome.attributes/: Cargo.toml  attributes.rs  lib.rs
compositor.introspection/introspection.extraction/extraction.window/window.handlers.chrome.extract/: Cargo.toml  extract.rs  lib.rs
compositor.introspection/introspection.extraction/extraction.window/window.handlers.chrome.profiles/: Cargo.toml  lib.rs  profiles.rs
environment/toolkit/y5-template/: Cargo.toml  README.md
environment/toolkit/y5-template/src/: main.rs  model.rs  picker.rs
environment/toolkit/y5-template/zed/: keymap.json  tasks.json
y5.template/default/: Cargo.toml  lib.rs
(+2203 files in other folders)
