[workspace]
resolver = "3"
members = [
    "developer.debug/*/*",
    "developer.environment/*/*",
    "developer.log/*/*",
    "developer.stats/*/*",
]

[workspace.dependencies]
tower = { version = "0.5", features = ["util"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
bitflags = "2.2.1"
hyper-util = "0.1"
# crates.io — versions kept in lockstep with compositor.rpc so the whole compositor
# build resolves a single tonic/prost/tokio.
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "sync"] }
tokio-stream = { version = "0.1.18", features = ["net", "sync"] }
tonic = "0.14.5"
prost = "0.14.3"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
crossbeam-channel = "0.5"

# intra-workspace crates (path deps; this workspace consumes no other workspace).
# The record crate is taken with default-features = false here: the runtime crates use
# only its API (not the level macros), so the *compiled-in* level set is decided solely by
# the top-level consumer (the compositor's execute crate) — that's what makes "select what
# to strip" controllable from one place.
compositor_developer_debug_instance_record = { path = "developer.debug/debug.instance/instance.record", default-features = false }
compositor_developer_log_process_instance = { path = "developer.log/log.process/process.instance" }
# The central environment config. Lives below the logging crate in the dep graph
# (serde-only, no logging dep) so log.process can read `log_level` from it.
compositor_developer_environment_config_base = { path = "developer.environment/environment.config/config.base" }
# Remaining intra-workspace crates. This workspace is hand-maintained (no generated
# block); path deps live ONLY here at the root and member crates use `workspace = true`.
compositor_developer_debug_instance_channel = { path = "developer.debug/debug.instance/instance.channel" }
compositor_developer_debug_instance_level = { path = "developer.debug/debug.instance/instance.level" }
compositor_developer_log_process_instance_bind = { path = "developer.log/log.process/process.instance.bind" }
compositor_developer_log_process_instance_drain = { path = "developer.log/log.process/process.instance.drain" }
compositor_developer_log_process_instance_serve = { path = "developer.log/log.process/process.instance.serve" }
compositor_developer_log_process_instance_shared = { path = "developer.log/log.process/process.instance.shared" }
compositor_developer_stats_registry_base = { path = "developer.stats/stats.registry/registry.base" }
compositor_developer_stats_registry_counter = { path = "developer.stats/stats.registry/registry.counter" }
compositor_developer_stats_registry_gpu = { path = "developer.stats/stats.registry/registry.gpu" }
compositor_developer_stats_registry_hdr = { path = "developer.stats/stats.registry/registry.hdr" }
compositor_developer_stats_registry_meta = { path = "developer.stats/stats.registry/registry.meta" }
compositor_developer_stats_registry_snapshot = { path = "developer.stats/stats.registry/registry.snapshot" }
