[package]
name = "mx-gesture-daemon"
version = "0.1.0"
edition = "2021"
description = "Minimal Rust daemon to divert and remap the MX Master gesture button via HID++ 2.0"
license = "MIT"

[dependencies]
hidapi = "2.6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
ctrlc = "3.4"
tonic = "0.14.5"
prost = "0.14.3"
tonic-prost = "0.14.5"
tokio = { version = "1.52.3", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "sync",
] }
tower = { version = "0.5.3" }
hyper-util = { version = "0.1.20" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
# panic = "abort"

[build-dependencies]
tonic-prost-build = "0.14.5"
