[package]
name = "iced_polkit_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", features = ["tokio", "advanced"] }
zbus = { version = "5.16.0", features = [ "tokio" ] }
tokio = { version = "1.52.3", features = [ "full" ] }
serde = { version = "1.0.228", features = [ "derive" ] }