# Interactive companion tool that authors ~/.config/y5.compositor/settings.json.
# Installation software (lives in the installer container), standalone like the other
# installer tools (own Cargo.lock, OUTSIDE link.all.sh, plain stdout). It shares the
# compositor's settings schema WITHOUT drift by path-depending on the exact same
# `config.base` crate the compositor parses — there is one `Environment` struct,
# compiled twice. No `[workspace]` table is needed: nothing above it in the installer
# container is a Cargo workspace, so cargo treats it as its own root (same as the
# pollkit-agent / mx-gesture-daemon siblings).
[package]
name = "y5-compositor-settings"
version = "0.1.0"
edition = "2021"
publish = false

# Cargo target names can't contain '.', so the binary is built as
# `y5-compositor-settings`; the installer exposes it under the command name
# `y5.compositor.settings` (symlink), which is what users invoke.
[[bin]]
name = "y5-compositor-settings"
path = "src/main.rs"

[dependencies]
# The single source of truth for the settings schema + path resolution. Same
# crate the compositor uses; sharing it by path makes drift impossible.
compositor_developer_environment_config_base = { path = "../../../compositor.developer/developer.environment/environment.config/config.base" }
# GPU render-node enumeration + estimated card names (pure std::fs, zero deps).
# The SAME method the in-compositor settings window uses, shared by path so the
# names shown here match what the compositor reports.
compositor_configurator_hardware_gpu_base = { path = "../../../compositor.extension/compositor.configurator/configurator.hardware/hardware.gpu/gpu.base" }
# The live preferences schema + atomic load/save (preferences.json). Same crate
# the compositor reads, so per-monitor mode preferences this tool writes are
# byte-identical to what the compositor expects.
compositor_developer_environment_preference_base = { path = "../../../compositor.developer/developer.environment/environment.preference/preference.base" }
serde_json = "1"
# Direct DRM connector/mode/EDID probing so the per-monitor preferences editor
# works standalone (during install, before any compositor session). Same crate
# version smithay vendors, so the connector/mode/EDID semantics match.
drm = "0.14"
# Raw terminal mode for a real Escape keypress in the menu/list navigation.
rustix = { version = "1", features = ["termios", "stdio"] }
