[package]
name = "compositor_developer_debug_instance_record"
version = "0.0.1"
edition = "2024"

# Compile-time level stripping. A disabled level's macro expands to nothing, so its
# code (and argument evaluation) is never generated. Independent of the runtime
# COMPOSITOR_LOG_LEVEL gate. Controlled from the top via the consuming crate's dep entry.
[features]
default = ["error", "warn", "info", "trace"]
error = []
warn = []
info = []
trace = []

[dependencies]
compositor_developer_debug_instance_channel = { workspace = true }
compositor_developer_debug_instance_level = { workspace = true }

[lib]
path = "lib.rs"
