[package]
name = "compositor_developer_environment_config_base"
version = "0.0.1"
edition = "2024"

# This crate is deliberately at the very bottom of the dependency graph: it has
# NO dependency on the logging crate (compositor_developer_debug_instance_record),
# so the logging system itself can depend on it for `log_level`. Keep deps to
# serde only.
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
path = "lib.rs"
