[package]
name = "compositor_developer_environment_preference_base"
version = "0.0.1"
edition = "2024"

[dependencies]
# Live, inline-reloaded user preferences (cursor speed, touch natural-scroll,
# per-EDID output modes), persisted to ~/.config/y5.compositor/preferences.json.
# Distinct from the read-once `environment.config` (settings.json); reuses that
# crate ONLY for the shared config-dir path resolver. serde for (de)serialize.
compositor_developer_environment_config_base = { workspace = true }
compositor_developer_environment_graphics_base = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
path = "lib.rs"
