[package]
name = "compositor_developer_log_process_instance_drain"
version = "0.0.1"
edition = "2024"

[dependencies]
compositor_developer_debug_instance_record = { workspace = true }
compositor_developer_log_process_instance_bind = { workspace = true }
compositor_developer_log_process_instance_shared = { workspace = true }
crossbeam-channel = { workspace = true }

[lib]
path = "lib.rs"
