[package]
name = "compositor_developer_log_process_instance_example"
version = "0.0.1"
edition = "2024"

[dependencies]
compositor_developer_log_process_instance = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }

[[bin]]
name = "stream_client"
path = "main.rs"
