[package]
name = "compositor_developer_log_process_instance_serve"
version = "0.0.1"
edition = "2024"

[dependencies]
compositor_developer_log_process_instance_bind = { workspace = true }
compositor_developer_log_process_instance_shared = { workspace = true }
compositor_developer_stats_registry_base = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[lib]
path = "lib.rs"
