[package]
name = "compositor_developer_log_process_main"
version = "0.0.1"
edition = "2024"

[dependencies]
compositor_developer_debug_instance_record = { workspace = true }
compositor_developer_environment_config_base = { workspace = true }
compositor_developer_log_process_instance = { workspace = true }
crossbeam-channel = { workspace = true }

[lib]
path = "lib.rs"
