[package]
name = "compositor_developer_stats_registry_snapshot"
version = "0.0.1"
edition = "2024"

[dependencies]
compositor_developer_stats_registry_counter = { workspace = true }
compositor_developer_stats_registry_meta = { workspace = true }
compositor_developer_stats_registry_gpu = { workspace = true }

[lib]
path = "lib.rs"
