[package]
name = "compositor_introspection_execution_launch_build"
version = "0.0.1"
edition = "2024"
# `build.rs` here is a normal module, not a Cargo build script.
build = false

[dependencies]
uuid = { workspace = true }
compositor_introspection_extraction_window_base = { workspace = true }
compositor_introspection_launchplan_plan_base = { workspace = true }
compositor_introspection_launchplan_plan_query = { workspace = true }
compositor_introspection_execution_launch_types = { workspace = true }

[lib]
path = "lib.rs"
