[package]
name = "compositor_introspection_execution_launch_dispatch"
version = "0.0.1"
edition = "2024"

[dependencies]
# calloop via smithay's reexport so the Sender type unifies with the loop.
smithay = { workspace = true }
compositor_introspection_execution_launch_execute = { workspace = true }
compositor_introspection_execution_launch_types = { workspace = true }
compositor_developer_debug_instance_record = { workspace = true }

[lib]
path = "lib.rs"
