[package]
name = "compositor_introspection_extraction_window_base"
version = "0.1.0"
edition = "2024"

[dependencies]
compositor_introspection_extraction_window_desktop_entry = { workspace = true }
compositor_introspection_extraction_window_desktop_search = { workspace = true }
compositor_introspection_extraction_window_handler_registry = { workspace = true }
compositor_introspection_extraction_window_handler_traits = { workspace = true }
compositor_introspection_extraction_window_handlers = { workspace = true }
compositor_introspection_extraction_window_hints_attribute = { workspace = true }
compositor_introspection_extraction_window_hints_attributes_identity = { workspace = true }
compositor_introspection_extraction_window_hints_attributes_launch = { workspace = true }
compositor_introspection_extraction_window_hints_descriptor = { workspace = true }
compositor_introspection_extraction_window_hints_extract = { workspace = true }
compositor_introspection_extraction_window_hints_extract_entry = { workspace = true }
compositor_introspection_extraction_window_hints_id = { workspace = true }
compositor_introspection_extraction_window_hints_inferred = { workspace = true }
compositor_introspection_extraction_window_hints_inferred_raw = { workspace = true }
compositor_introspection_extraction_window_hints_source = { workspace = true }
compositor_introspection_extraction_window_hints_values = { workspace = true }
compositor_introspection_extraction_window_icon = { workspace = true }
compositor_introspection_extraction_window_meta_proc_read = { workspace = true }
compositor_introspection_extraction_window_meta_proc_tree = { workspace = true }
compositor_introspection_extraction_window_meta_types = { workspace = true }
compositor_introspection_extraction_window_meta_wayland = { workspace = true }
compositor_introspection_extraction_window_meta_wayland_surface = { workspace = true }

[lib]
path = "lib.rs"
