[package]
name = "compositor_introspection_extraction_window_handler_registry"
version = "0.0.1"
edition = "2024"

[dependencies]
compositor_introspection_extraction_window_handler_hints = { workspace = true }
compositor_introspection_extraction_window_handler_traits = { workspace = true }
compositor_introspection_extraction_window_hints_id = { workspace = true }
compositor_introspection_extraction_window_hints_inferred = { workspace = true }
compositor_introspection_extraction_window_hints_source = { workspace = true }
compositor_introspection_extraction_window_meta_types = { workspace = true }
compositor_developer_debug_instance_record = { workspace = true }

[lib]
path = "lib.rs"
