[package]
name = "compositor_introspection_extraction_window_handlers_chrome_attributes"
version = "0.0.1"
edition = "2024"

[dependencies]
serde.workspace = true
compositor_introspection_extraction_window_handlers_chrome_id = { workspace = true }
compositor_introspection_extraction_window_hints_attribute = { workspace = true }
compositor_introspection_extraction_window_hints_descriptor = { workspace = true }
compositor_introspection_extraction_window_hints_id = { workspace = true }

[lib]
path = "lib.rs"
