[package]
name = "compositor_introspection_extraction_window_handlers_chrome"
version = "0.0.1"
edition = "2024"

[dependencies]
compositor_introspection_extraction_window_handler_registry = { workspace = true }
compositor_introspection_extraction_window_handler_traits = { workspace = true }
compositor_introspection_extraction_window_handlers_chrome_attributes = { workspace = true }
compositor_introspection_extraction_window_handlers_chrome_attributes_more = { workspace = true }
compositor_introspection_extraction_window_handlers_chrome_extract = { workspace = true }
compositor_introspection_extraction_window_handlers_chrome_id = { workspace = true }
compositor_introspection_extraction_window_handlers_chrome_profiles = { workspace = true }
compositor_introspection_extraction_window_hints_descriptor = { workspace = true }
compositor_introspection_extraction_window_hints_id = { workspace = true }
compositor_introspection_extraction_window_hints_inferred = { workspace = true }
compositor_introspection_extraction_window_hints_source = { workspace = true }
compositor_introspection_extraction_window_meta_types = { workspace = true }

[lib]
path = "lib.rs"
